--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="page-header">
 	<div class="container">
-      malcevmr.ru@gmail.com <br> +79507762733
+      <a class ="header-email"  target="_blank" href="https://malcevmr.ru@gmail.com">malcevmr.ru@gmail.com</a> <br> <a class="header-phone" href="tel:+79876543210">+79507762733</a>
 	  </div>
     </header>
 
@@ -24,6 +24,9 @@
     </section>
 
     <section class="intro">
+	<figure class="container">
+		<img src="C:\портфолио\__MACOSX\portfolio-images\files\user.jpg" width="1000" alt="Фотография Неопознанного Енота">
+	</figure>
 	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
@@ -36,10 +39,13 @@
     <section class="portfolio">
 	<div class="container">
       <h2 class="subheading">Мои работы</h2>
+	  <figure class="project-image">
+  <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+</figure>
 
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
-
+	  <a class="button" href="C:\портфолио\portfolio-step-1\index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
 	  </div>
@@ -47,7 +53,7 @@
 
     <footer class="page-footer">
 	<div class="container">
-      malcevmr.ru@gmail.com <br> +79507762733
+      <a class ="footer-email"   target="_blank" href="https://malcevmr.ru@gmail.com">malcevmr.ru@gmail.com</a> <br> <a class="footer-phone" href="tel:+79876543210">+79507762733</a>
 	  </div>
     </footer>
   </body>
