--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="intro">
 	<figure class="container">
-		<img src="my-site/user.jpg" width="1000" alt="Фотография Неопознанного Енота">
+		<img src="img/user.jpg" width="1000" alt="Фотография Неопознанного Енота">
 	</figure>
 	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
