--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="page-header">
 	<div class="container">
-      <a class ="header-email"  target="_blank" href="https://malcevmr.ru@gmail.com">malcevmr.ru@gmail.com</a> <br> <a class="header-phone" href="tel:+79876543210">+79507762733</a>
+      <a class ="header-email"  target="_blank" href="https://malcevmr.ru@gmail.com">malcevmr.ru@gmail.com</a>  <a class="header-phone" href="tel:+79876543210">+79507762733</a>
 	  </div>
     </header>
 
@@ -53,7 +53,7 @@
 
     <footer class="page-footer">
 	<div class="container">
-      <a class ="footer-email"   target="_blank" href="https://malcevmr.ru@gmail.com">malcevmr.ru@gmail.com</a> <br> <a class="footer-phone" href="tel:+79876543210">+79507762733</a>
+      <a class ="footer-email"   target="_blank" href="https://malcevmr.ru@gmail.com">malcevmr.ru@gmail.com</a>  <a class="footer-phone" href="tel:+79876543210">+79507762733</a>
 	  </div>
     </footer>
   </body>
