--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="hero-image">
 	<div class="container">
-      <h1 class="heading"> <strong>Мальцев Михаил <br> Романович </strong> </h1>
+      <h1 class="heading"> <strong>Мальцев Михаил </strong> </h1>
       <p>Junior верстальщик</p>
 	  </div>
     </section>
